whoami-oauth2proxy/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: whoami-oauth2proxy
spec:
  type: NodePort
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180
      nodePort: 30180  # You can choose any port between 30000-32767
