whoami-oauth2proxy/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        args:
          - --provider=keycloak
          - --client-id=$(CLIENT_ID)
          - --client-secret=$(CLIENT_SECRET)
          - --cookie-secret=$(COOKIE_SECRET)
          - --cookie-secure=false
          - --email-domain=*
          - --upstream=http://whoami.default.svc.cluster.local:80
          - --http-address=0.0.0.0:4180
          - --redirect-url=http://whoami.local/oauth2/callback
          - --oidc-issuer-url=http://keycloak.default.svc.cluster.local:8080/realms/myrealm
        ports:
        - containerPort: 4180

---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180
