whoami-oauth2proxy/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.default.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://whoami.local/oauth2/start?rd=$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization,Set-Cookie"
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.local
      http:
        paths:
          - path: /oauth2/
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
